--- a/artical.html
+++ b/artical.html
@@ -167,7 +167,7 @@
           </div>
         </header>
         <div class="am-comment-bd">
-          <p>评论评论评论评论评论评论评论评论评论评论评论评论评论评论评论</p>
+          <p>评论评论评论评论评论评论评论评论评论评论评论评论评论评论</p>
         </div>
       </div>
       
