add page and amend some page

--- a/admin-pwd.html
+++ b/admin-pwd.html
@@ -57,14 +57,15 @@
           <ul class="am-list am-collapse admin-sidebar-sub am-in" id="collapse-nav">
             <li><a href="admin-user.html" class="am-cf"><span class="am-icon-user"></span> 个人资料</a></li>
             <li><a href="admin-pwd.html"><span class="am-icon-lock"></span> 修改密码<span class="am-icon-hand-o-left am-fr am-margin-right admin-icon-yellow"></span></a></li>
+            <li><a href="admin-log.html"><span class="am-icon-calendar"></span> 用户日志</a></li>
           </ul>
         </li>
         <li class="admin-parent">
           <a class="am-cf" data-am-collapse="{target: '#collapse-nav'}"><span class="am-icon-file"></span> 博客管理 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
           <ul class="am-list am-collapse admin-sidebar-sub am-in" id="collapse-nav">
             <li><a href="admin-artical.html"><span class="am-icon-pencil-square-o"></span> 文章管理</a></li>
+            <li><a href="admin-comment.html"><span class="am-icon-umbrella"></span> 评论管理</a></li>
             <li><a href="admin-guest.html"><span class="am-icon-users"></span> 访客管理</a></li>
-            <li><a href="admin-log.html"><span class="am-icon-calendar"></span> 系统日志</a></li>
             <li><a href="admin-back.html"><span class="am-icon-database"></span> 数据备份</a></li>
           </ul>
         </li>
