--- a/admin-log.html
+++ b/admin-log.html
@@ -57,14 +57,16 @@
           <ul class="am-list am-collapse admin-sidebar-sub am-in" id="collapse-nav">
             <li><a href="admin-user.html" class="am-cf"><span class="am-icon-user"></span> 个人资料</a></li>
             <li><a href="admin-pwd.html"><span class="am-icon-lock"></span> 修改密码</a></li>
+            <li><a href="admin-log.html"><span class="am-icon-calendar"></span> 用户日志<span class="am-icon-hand-o-left am-fr am-margin-right admin-icon-yellow"></span></a></li>
+            
           </ul>
         </li>
         <li class="admin-parent">
           <a class="am-cf" data-am-collapse="{target: '#collapse-nav'}"><span class="am-icon-file"></span> 博客管理 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
           <ul class="am-list am-collapse admin-sidebar-sub am-in" id="collapse-nav">
             <li><a href="admin-user.html"><span class="am-icon-pencil-square-o"></span> 文章管理</a></li>
+            <li><a href="admin-comment.html"><span class="am-icon-umbrella"></span> 评论管理</a></li>
             <li><a href="admin-guest.html"><span class="am-icon-users"></span> 访客管理</a></li>
-            <li><a href="admin-log.html"><span class="am-icon-calendar"></span> 系统日志<span class="am-icon-hand-o-left am-fr am-margin-right admin-icon-yellow"></span></a></li>
             <li><a href="admin-back.html"><span class="am-icon-database"></span> 数据备份</a></li>
           </ul>
         </li>
@@ -81,7 +83,7 @@
   <div class="admin-content">
     <div class="admin-content-body">
       <div class="am-cf am-padding am-padding-bottom-0">
-        <div class="am-fl"><strong class="am-text-primary am-text-lg">错误日志</strong> / <small>Error Log</small></div>
+        <div class="am-fl"><strong class="am-text-primary am-text-lg">用户日志</strong> / <small>User Log</small></div>
       </div>
 
       <hr/>
